# AllTrax-Telemetry

./: .gitmodules  CMakeLists.txt  README.md  TODO.md
cmake/: Findhidapi.cmake
common/: gps.cpp  gps.h  link.cpp  link.h  newpack.h  packet.cpp  packet.h  radio.cpp  radio.h  version.h
docs/: Abstract-Overview
onboard/: CMakeLists.txt  main.cpp  radio.h  util.cpp
onboard/alltrax/: alltrax.cpp  alltrax.h  alltraxvars.cpp  alltraxvars.h
onboard/alltrax/alltraxvars/: var.h  varbool.h  varint16.h  varint32.h  varint8.h  varstring.h  varu16.h  varu32.h  varu8.h
receiver/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  radio.cpp  radio.h
src/: alltrax.cpp  alltrax.h  alltraxmem.h  alltraxvars.cpp  alltraxvars.h  main.cpp  util.h
src/alltrax/: alltrax.cpp  alltrax.h
src/alltraxvars/: var.h  varbool.h  varint16.h  varint32.h  varint8.h  varstring.h  varu16.h  varu32.h  varu8.h
src/telemetry/: packet.h  radio.cpp  radio.h
